Improve cache clearing/GC/heap dump behavior